📝 記事の更新

--- a/content/blog/nft-allowlist-smart-contract.mdx
+++ b/content/blog/nft-allowlist-smart-contract.mdx
@@ -1122,6 +1122,6 @@ hardhatやfoundryならおおよそのかかるガス代を事前に見れるの
 
 この記事がこれからNFTのセールをするエンジニアの方の参考になれば幸いです。
 
-もし参考になったという方がいましたら、ブクマかTwitterなどでシェアしていただけると嬉しいです。
+もし参考になったという方がいましたら、ブックマークかTwitterなどでシェアしていただけると嬉しいです。
 
-また、NFTプロジェクトを立ち上げたいなどでブロックチェーンエンジニアをお探しでしたら<a href="https://twitter.com/orca48691">DM</a>か<a href="mailto:ryuji48691771@gmail.com">メール</a>していただければご相談に乗りますのでお気軽に送っていただければと思います！
+また、ブロックチェーンエンジニアをお探しでしたら<a href="https://twitter.com/orca48691">DM</a>か<a href="mailto:ryuji48691771@gmail.com">メール</a>していただければご相談に乗りますのでお気軽に送っていただければと思います！
