📝 記事の修正

--- a/content/blog/nft-allowlist-smart-contract.mdx
+++ b/content/blog/nft-allowlist-smart-contract.mdx
@@ -564,7 +564,7 @@ contract NFTFree is ERC721A("MyToken", "MTK"), Ownable {
 これでセールの時間にならないと購入できなくて、購入上限に達したらエラーになるようにできました！
 
 <AlertCard  title="有料販売の場合" variant="pro">
-	価格をつけて販売する場合は以下のNFTPayableを参考にしてみてください。
+	価格をつけて販売する場合は[NFTPayable](https://github.com/ryuji-orca/nft-allowlist-merkle-tree-foundry/blob/master/src/NftPayable.sol)を参考にしてみてください。
 </AlertCard>
 
 ### テストコードを書く
