🩹 メアドの変更

--- a/content/blog/nft-allowlist-smart-contract.mdx
+++ b/content/blog/nft-allowlist-smart-contract.mdx
@@ -1129,4 +1129,4 @@ hardhatやfoundryならおおよそのかかるガス代を事前に見れるの
 
 もし参考になったという方がいましたら、ブックマークかTwitterなどでシェアしていただけると嬉しいです。
 
-また、ブロックチェーンエンジニアをお探しでしたら<a href="https://twitter.com/orca48691">DM</a>か<a href="mailto:ryuji48691771@gmail.com">メール</a>していただければご相談に乗りますのでお気軽に送っていただければと思います！
+また、ブロックチェーンエンジニアをお探しでしたら<a href="https://twitter.com/orca48691">DM</a>か<a href="mailto:shachilog.ryuji@gmail.com">メール</a>していただければご相談に乗りますのでお気軽に送っていただければと思います！
