📝 タイトルの変更

--- a/content/blog/nft-allowlist-smart-contract.mdx
+++ b/content/blog/nft-allowlist-smart-contract.mdx
@@ -1,8 +1,8 @@
 ---
-title: 【決定版】NFTのアローリスト(ホワイトリスト)をスマートコントラクトで実装する方法
+title: 【決定版】NFTのアローリスト(ホワイトリスト)をスマートコントラクトで作る方法
 slug: nft-allowlist-smart-contract
 publishedAt: 2023-06-21
-summary: 'NFTのアローリスト(ホワイトリスト)をスマートコントラクトで実装する方法を解説します。'
+summary: 'NFTのアローリスト(ホワイトリスト)をスマートコントラクトで作る方法を解説します。'
 tags: [solidity, nft, smart-contract]
 image: /image/merkle-tree/merkle-tree-allowlist-social.png
 ---
