♻️ 誤字の修正

--- a/content/about/tmas.mdx
+++ b/content/about/tmas.mdx
@@ -24,9 +24,7 @@ layout: "full"
 - [Mantine](https://mantine.dev/)
 - [viem](https://viem.sh/) / [wagmi](https://wagmi.sh/)
 
-<FullPageH2 title="STACK" />
-
-TheMafiaAnimals Soldiersは育成ができるNFTで、サイトに以下の機能を実装する必要がありました。
+<FullPageH2 title="実装した機能" />
 
 <FullPageH3 title="初期の機能" />
 
