--- a/content/about/app.mdx
+++ b/content/about/app.mdx
@@ -46,7 +46,7 @@ layout: "full"
 盗難防止の機能の[ぱんだロック](https://youtu.be/-T3ACrclZGo?feature=shared)に[CryptoNinja Partners Rookies](https://www.ninja-dao.com/cnpr)で使ったオフチェーン署名が採用されました。
 
 <ReactPlayerYoutube
-  url="https://www.youtube.com/watch?v=-T3ACrclZGo&list=TLGGxFdMawC8yaowNjA5MjAyNA"
+  url="https://youtu.be/-T3ACrclZGo?si=RiqVszmXtWlOY3rg"
   size={"full"}
 />
 
